# garden-labs-program-library

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  .mocharc.json  Anchor.toml  Cargo.toml  NOTES.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
advanced-token-metadata/js/: index.ts
advanced-token-metadata/program/: Cargo.toml
advanced-token-metadata/program/src/: field_authority.rs  field_authority_v2.rs  lib.rs  processor.rs
advanced-token-metadata/program/tests/: program_test.rs
advanced-token-metadata/test/: advanced-token-metadata-v2.ts  advanced-token-metadata.ts  spl-token-metadata-example.ts  v1.ts  v2.ts
ai-aliens/js/: index.ts
ai-aliens/program/: Cargo.toml
ai-aliens/program/src/: error.rs  helpers.rs  instructions.rs  lib.rs  processor.rs  state.rs
ai-aliens/test/: ai-aliens.ts  index.ts
common/js/: helpers.ts  index.ts  token-metadata-interface.ts  tx-error.ts  tx-sender.ts
common/rust/: Cargo.toml
common/rust/src/: lib.rs
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/pages/: ai-aliens.md  background.md  example-ai-aliens.md  field-authority-interface.md  holder-metadata-program.md  holder-metadata.md  installation.md  introduction.md  srfc-17-recommendation.md  token-2022.md
docs/pages/cabal/: api.md  introduction.md
docs/pages/holder-metadata/: example-ai-aliens.md  field-authority-interface.md  holder-metadata-plugin.md  introduction.md  token-metadata-interface.md
docs/pages/toolkit/: introduction.md
field-authority-interface/interface/: Cargo.toml
field-authority-interface/interface/src/: constants.rs  errors.rs  instructions.rs  instructions_v2.rs  lib.rs  state.rs  state_v2.rs
field-authority-interface/js/: field-authority-interface.ts  helpers.ts  index.ts  instructions-v2.ts  instructions.ts  state-v2.ts  state.ts
field-authority-interface/program/: Cargo.toml
field-authority-interface/program/src/: instruction.rs  lib.rs
holder-metadata-plugin/js/: holder-metadata-plugin.ts  index.ts
holder-metadata-plugin/program/: Cargo.toml
holder-metadata-plugin/program/src/: constants.rs  instructions.rs  lib.rs  processor.rs
holder-metadata-plugin/test/: holder-metadata-plugin-v2.ts  holder-metadata-plugin.ts  holder-metadata.ts  v1.ts  v2.ts
programs-vanilla/field-authority-interface/: Cargo.toml
programs-vanilla/field-authority-interface/src/: constant.rs  error.rs  helper.rs  instruction.rs  lib.rs  state.rs
programs-vanilla/spl-token-metadata-example/: Cargo.toml
programs-vanilla/spl-token-metadata-example/src/: field_authority.rs  lib.rs  processor.rs
programs/ai-aliens/: Cargo.toml
programs/ai-aliens/src/: constant.rs  helper.rs  instructions.rs  lib.rs  processor.rs  state.rs
programs/holder-metadata/: Cargo.toml
programs/holder-metadata/src/: lib.rs  processor.rs  state.rs
scripts/: build-atm.sh  deploy-local-atm.sh  deploy.sh  extend.sh  log-target-keys.sh  resume.sh
scripts/deploy/: advanced-token-metadata.sh  spl-token-metadata-example.sh
scripts/deploy/devnet/: all.sh  the100.sh
scripts/deploy/localnet/: advanced-token-metadata.sh
scripts/deploy/mainnet/: the100.sh
scripts/extend/devnet/: the100.sh
scripts/extend/mainnet/: the100.sh
scripts/resume/mainnet/: the100.sh
sdk/: index.ts
test/: constants.ts  index.ts  setup.ts
tests/: ai-aliens.ts  holder-metadata.ts  spl-token-metadata-example.ts
the100/js/: index.ts
the100/program/: Cargo.toml
the100/program/src/: constants.rs  errors.rs  helpers.rs  lib.rs  state.rs
the100/program/src/instructions/: init_col_data.rs  init_group.rs  mint_nft.rs  mod.rs  set_col_data.rs  update_col_data.rs  update_holder_field.rs
the100/test/: index.ts
toolkit/program/: Cargo.toml
toolkit/program/src/: lib.rs
toolkit/program/src/instructions/: init_if_needed.rs  mod.rs
toolkit/test/: index.ts
util/: config.ts  constants.ts  field-authority-interface.ts  helpers.ts  index.ts  tx.ts
util/bash/deploy/: advanced-token-metadata.sh
util/bash/deploy/devnet/: all.sh  the100.sh
util/bash/deploy/localnet/: advanced-token-metadata.sh
util/bash/deploy/mainnet/: the100.sh
util/docs/: index.md  package-lock.json
util/docs/.vitepress/: config.mts
util/docs/pages/: example-ai-aliens.md
util/docs/pages/holder-metadata/: background.md  field-authority-interface.md  holder-metadata-plugin.md  holder-metadata-program.md
util/docs/pages/vending-machine/: introduction.md
util/js/: config.ts  constants.ts  helpers.ts  test-setup.ts
util/rust/: Cargo.toml
util/rust/src/: lib.rs
vending-machine/: LICENSE
vending-machine/js/: index.ts  vending-machine.ts
vending-machine/program/: Cargo.toml
vending-machine/program/src/: constants.rs  errors.rs  helpers.rs  lib.rs  state.rs  util.rs
vending-machine/program/src/instructions/: create_mint.rs  init.rs  mint_nft.rs  mod.rs
vending-machine/test/: index.ts  vending-machine.ts
