[workspace]
members = [
    "field-authority-interface/program",
    "advanced-token-metadata/program",
    "holder-metadata-plugin/program",
    "ai-aliens/program",
    "vending-machine/program"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
