[package]
name = "advanced-token-metadata"
version = "0.3.0"
description = "SPL Token Metadata Fork with Add-Ons"
authors = ["Garden Labs <jackson@gardenlabs.com>"]
repository = "https://github.com/garden-labs/garden-labs-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = ">=1.18.11,<=2"
spl-token-2022 = { version = "3.0.2", features = ["no-entrypoint"] }
spl-token-metadata-interface =  "0.3.3"
spl-type-length-value = "0.4.3"
spl-pod = "0.2.2"
borsh = "1.5.0"
field-authority-interface = { version = "0.3.3", path = "../../field-authority-interface/program" }

[dev-dependencies]
solana-program-test = ">=1.18.11,<=2"
solana-sdk = ">=1.18.11,<=2"
spl-token-client = "0.10.0"
test-case = "3.3"

[lib]
crate-type = ["cdylib", "lib"]
