[package]
name = "ai-aliens"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ai_aliens"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "holder-metadata-plugin/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = "0.30.1"
spl-token-metadata-interface = "0.3.3"
spl-token-2022 = { version = "3.0.2", features = ["no-entrypoint"] }
holder-metadata-plugin = { version = "0.3.0", path = "../../holder-metadata-plugin/program", features = ["cpi"]}
spl-pod = "0.2.2"
field-authority-interface = { version = "0.3.3", path = "../../field-authority-interface/program" }