[package]
name = "ai-aliens"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ai_aliens"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "holder-metadata-plugin/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token-metadata-interface = { workspace = true }
spl-token-2022 = { workspace = true }
holder-metadata-plugin = { version = "0.3.0", path = "../../holder-metadata-plugin/program", features = ["cpi"]}
spl-pod = { workspace = true }
field-authority-interface = { version = "0.3.3", path = "../../field-authority-interface/interface" }
gpl-util = { version = "0.1.0", path = "../../util/rust" }