[package]
name = "holder-metadata-plugin"
version = "0.2.0"
description = "Acts as a field authority and checks token ownership before updating metadata"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "holder_metadata"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token-metadata-interface = "0.2.0"
field-authority-interface = { version = "0.2.0", path = "../../field-authority-interface/program" }
spl-pod = "0.1.0"
