[package]
name = "holder-metadata-plugin"
version = "0.3.0"
description = "Acts as a field authority and checks token ownership before updating metadata"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "holder_metadata_plugin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
spl-token-metadata-interface = "0.3.3"
field-authority-interface = { version = "0.3.3", path = "../../field-authority-interface/program" }
spl-pod = "0.2.2"
