[package]
name = "field-authority-interface"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.17.6"
spl-token-metadata-interface =  "0.2.0"
borsh = "0.10"
thiserror = "1.0"
spl-discriminator = "0.2.2"