[package]
name = "spl-token-metadata-example"
version = "0.2.0"
description = "Solana Program Library Token Metadata Example Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = "1.17.6"
spl-token-2022 = { version = "1.0", features = ["no-entrypoint"] }
spl-token-metadata-interface =  "0.2.0"
spl-type-length-value = "0.3.0"
spl-pod = "0.1.0"
borsh = "0.10"
field-authority-interface = { version = "0.2.0", path = "../field-authority-interface" }

[dev-dependencies]
solana-program-test = "1.17.6"
solana-sdk = "1.17.6"
spl-token-client = "0.8"
test-case = "3.3"

[lib]
crate-type = ["cdylib", "lib"]
